[gd_scene load_steps=12 format=2]

[ext_resource path="res://title_screen/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://title_screen/images/logo.png" type="Texture" id=2]
[ext_resource path="res://title_screen/buttons/NewGameButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://title_screen/buttons/ContinueButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://title_screen/buttons/OptionsButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://title_screen/buttons/ExitButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://title_screen/images/frontimage.png" type="Texture" id=7]
[ext_resource path="res://title_screen/fonts/montserrat_eb_24.tres" type="DynamicFont" id=8]
[ext_resource path="res://title_screen/images/Liu-logo.png" type="Texture" id=9]
[ext_resource path="res://fade_in/FadeIn.tscn" type="PackedScene" id=10]
[ext_resource path="res://title_screen/double_the_bits.wav" type="AudioStream" id=11]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.86401
margin_top = 1.43198
margin_right = -2.86401
margin_bottom = 1.43201
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 90.0
margin_top = 32.0
margin_right = 1283.0
margin_bottom = 718.0
custom_constants/separation = 20

[node name="Logo" type="TextureRect" parent="Menu"]
margin_right = 1193.0
margin_bottom = 181.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_top = 201.0
margin_right = 1193.0
margin_bottom = 586.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 594.0
margin_bottom = 385.0
rect_min_size = Vector2( 300, 385 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="NewGameButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_top = 42.0
margin_right = 594.0
margin_bottom = 102.0
script = null

[node name="ContinueButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_top = 122.0
margin_right = 594.0
margin_bottom = 182.0
script = null

[node name="OptionsButton" parent="Menu/CenterRow/Buttons" instance=ExtResource( 5 )]
margin_top = 202.0
margin_right = 594.0
margin_bottom = 262.0
script = null

[node name="Exit" parent="Menu/CenterRow/Buttons" instance=ExtResource( 6 )]
margin_top = 282.0
margin_right = 594.0
margin_bottom = 342.0
script = null

[node name="CenterContainer" type="CenterContainer" parent="Menu/CenterRow"]
margin_left = 598.0
margin_right = 1193.0
margin_bottom = 385.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="FrontImage" type="TextureRect" parent="Menu/CenterRow/CenterContainer"]
margin_left = 71.0
margin_top = 24.0
margin_right = 523.0
margin_bottom = 360.0
rect_min_size = Vector2( 452, 336 )
texture = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="CenterRow2" type="HBoxContainer" parent="Menu"]
margin_top = 606.0
margin_right = 1193.0
margin_bottom = 686.0
custom_constants/separation = 720

[node name="VersionLabel" type="Label" parent="Menu/CenterRow2"]
margin_right = 243.0
margin_bottom = 65.0
size_flags_vertical = 0
size_flags_stretch_ratio = 1.01
custom_fonts/font = ExtResource( 8 )
text = "Version 0.1
Sylvain Lapeyrade "
valign = 2

[node name="TextureRect" type="TextureRect" parent="Menu/CenterRow2"]
margin_left = 963.0
margin_right = 1163.0
margin_bottom = 80.0
rect_min_size = Vector2( 200, 80 )
texture = ExtResource( 9 )
expand = true

[node name="FadeIn" parent="." instance=ExtResource( 10 )]

[node name="DoubleTheBits" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true
[connection signal="pressed" from="Menu/CenterRow/Buttons/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="Menu/CenterRow/Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
